<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>scan_deskewer</name>
  <version>1.0.0</version>
  <description>Node to deskew and pointclouds.</description>
  <maintainer email="info@dotxautomation.com">dotX Automation s.r.l.</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_ros</buildtool_depend>
  <buildtool_depend>eigen3_cmake_module</buildtool_depend>

  <build_depend>eigen</build_depend>

  <buildtool_export_depend>eigen3_cmake_module</buildtool_export_depend>

  <build_export_depend>eigen</build_export_depend>

  <depend>dua_app_management</depend>
  <depend>dua_common_interfaces</depend>
  <depend>dua_geometry_interfaces</depend>
  <depend>dua_node_cpp</depend>
  <depend>dua_qos_cpp</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>params_manager_cpp</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>sensor_msgs</depend>
  <depend>simple_serviceclient_cpp</depend>
  <depend>std_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
